# SWIVL

./: .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTROLLER_INTERFACE_UPDATE.md  FIXES_AND_IMPROVEMENTS.md  FIX_SUMMARY.md  IMPEDANCE_CONTROLLER_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_DEMO.md  REFACTORING_SUMMARY.md  SE2_FRAME_CONVENTIONS.md  SETUP_GUIDE.md  USAGE_EXAMPLES.md  controller.py  demo_static_hold.py  demo_teleoperation.py  pyproject.toml  requirements.txt  se2_math.py  setup_conda.sh  test_stability.py  test_wrench_and_grip.py  verify_demo.py
checkpoints/: impedance_policy_config.yaml
code_workspace/: .gitignore  pyproject.toml  requirements.txt
code_workspace/checkpoints/: impedance_policy_config.yaml
code_workspace/docs/: HL_RL_PIPELINE_README.md  PIPELINE_FLOW_ANALYSIS.md  README.md  SE2_FRAME_CONVENTIONS.md
code_workspace/evaluation_results/: episode_results.json  metrics.json
code_workspace/src/: __init__.py  data_utils.py  se2_math.py
docs/: IMPEDANCE_CONTROLLER_ANALYSIS.md  PIPELINE_FLOW_ANALYSIS.md  README.md  SE2_IMPEDANCE_VERIFICATION.md
evaluation_results/: eval_config.yaml
gym_biart/: README.md  __init__.py  example.py
gym_biart/envs/: __init__.py  biart.py  keyboard_planner.py  pd_controller.py
paper/: README.md  algorithms.tex  code_to_paper_mapping.md  method.tex  se2_convention_analysis.md  supplementary.tex
paper_workspace/: neurips_2024_main.aux  neurips_2024_main.bbl  neurips_2024_main.blg  neurips_2024_main.fdb_latexmk  neurips_2024_main.fls  neurips_2024_main.out  neurips_2024_main.tex  reference_update_lists.md  references.bib
paper_workspace/appendix/: appendix_environment_settings.tex  appendix_impedance_control.tex  appendix_learning_settings.tex  appendix_notation.tex  appendix_se2.tex  (+1 more)
scripts/: run_visualization.py
src/: bimanual_utils.py  se2_dynamics.py  se2_math.py  trajectory_generator.py
swivl.egg-info/: PKG-INFO
(+99 files in other folders)
